# prowlr-doctor

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
dashboard/: __init__.py  __main__.py  server.py  storage.py
dashboard/static/: index.html
docs/: architecture.md  auditors.md  cli.md  tui-keybindings.md
src/prowlr_doctor/: __init__.py  __main__.py  cli.py  models.py  patch_planner.py  paths.py  recommender.py  reporter.py  scanner.py  telemetry.py  tokens.py
src/prowlr_doctor/auditors/: agents.py  base.py  claude_md.py  hooks.py  mcp.py  memory.py  plugins.py  security.py
src/prowlr_doctor/tui/: app.py
tests/: conftest.py  test_dashboard.py  test_models.py  test_scanner.py  test_telemetry.py  test_tokens.py  test_tui.py
tests/auditors/: test_claude_md.py  test_hooks.py  test_memory.py  test_plugins.py  test_security.py
